# so101-ros2-behaviors

./: .gitignore  README.md
so101_bringup/: package.xml  setup.py
so101_control_py/: package.xml  setup.cfg  setup.py
so101_control_py/so101_control_py/: behaviour_controller_node.py
so101_description/: package.xml  setup.py
so101_description/launch/: display.launch.py
so101_description/rviz/: so101.rviz
so101_description/urdf/: so101.urdf
so101_hardware_py/: package.xml  setup.cfg  setup.py
so101_hardware_py/so101_hardware_py/: arm_interface_node.py  imu_serial_node.py
